--- a/score.html
+++ b/score.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Skor Tebak Bendera Negara - Ghozy Games">
     <meta property="og:description" content="Saya mendapat skor [SKOR] di Tebak Bendera Negara! Coba kalahkan skor saya!">
     <meta property="og:image" id="og-image" content="">
-    <meta property="og:url" content="https://username.github.io/repo-name/score.html">
+    <meta property="og:url" content="https://argana12.github.io/tebak-bendera-2/score.html">
     <meta property="og:type" content="website">
     <!-- Twitter Card Metadata -->
     <meta name="twitter:card" content="summary_large_image">
@@ -104,9 +104,9 @@
 
     <!-- FOOTER -->
     <div class="footer">
-        <p id="footer-copyright">© 2025 Ghozy Games. Semua Hak Dilindungi - Dibuat dengan Semangat.</p>
+        <p id="footer-copyright">© 2025 Ghozy Games. Semua Hak Dilindungi.</p>
         <p>
-            <a href="privacy.html">Kebijakan Privasi</a> | 
+            <a href="privacy-policy.html">Kebijakan Privasi</a> | 
             <a href="about.html">Tentang</a> | 
             <a href="contact.html">Kontak</a>
         </p>
